<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_add_meeting"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="false">

    <LinearLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical"
        tools:context=".meeting_list.AddMeetingActivity">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_view_information_meeting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="5dp"
            app:cardElevation="1dp"
            app:cardMaxElevation="1.2dp"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/name_meeting_layout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/name_meeting_in"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/txt_input_layout_name_meeting"
                        android:ems="10"
                        android:maxLength="20"
                        android:inputType="text" />
                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:id="@+id/room_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="18dp"
                    android:gravity="center"
                    android:weightSum="2">

                    <TextView
                        android:id="@+id/pick_room_txt"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="9dp"
                        android:layout_weight="0.63"
                        android:textAlignment="center"
                        android:visibility="gone" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/pick_room_btn"
                        style="@style/Widget.MaterialComponents.Button"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.37"
                        android:enabled="true"
                        android:hint="@string/txt_room_button"
                        app:cornerRadius="20dp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/participant_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="18dp"
                    android:layout_marginBottom="20dp"
                    android:gravity="center"
                    android:weightSum="2">

                    <TextView
                        android:id="@+id/pick_participant_txt"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.43"
                        android:textAlignment="center"
                        android:visibility="gone" />

                    <ImageView
                        android:id="@+id/pick_participant_img"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="9dp"
                        android:layout_weight="0.20"
                        android:src="@drawable/ic_baseline_person_24"
                        android:visibility="gone"
                        android:contentDescription="@string/desc_drawable_person" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/pick_participant_btn"
                        style="@style/Widget.MaterialComponents.Button"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.37"
                        android:enabled="true"
                        android:hint="@string/txt_participants_button"
                        app:cornerRadius="20dp" />

                </LinearLayout>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_view_date_time_meeting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:cardCornerRadius="5dp"
            app:cardElevation="1dp"
            app:cardMaxElevation="1.2dp"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:text="@string/txt_title_date_time"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"/>

                <LinearLayout
                    android:id="@+id/date_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:weightSum="2">

                    <TextView
                        android:id="@+id/pick_date_txt"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="9dp"
                        android:layout_weight="0.63"
                        android:textAlignment="center"
                        android:visibility="gone" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/pick_date_btn"
                        style="@style/Widget.MaterialComponents.Button"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.37"
                        android:enabled="true"
                        android:hint="@string/txt_date_button"
                        android:visibility="visible"
                        app:cornerRadius="20dp" />


                </LinearLayout>

                <LinearLayout
                    android:id="@+id/time_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="18dp"
                    android:layout_marginBottom="20dp"
                    android:gravity="center"
                    android:weightSum="2">

                    <TextView
                        android:id="@+id/pick_time_txt"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="9dp"
                        android:layout_weight="0.63"
                        android:textAlignment="center"
                        android:visibility="gone" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/pick_time_btn"
                        style="@style/Widget.MaterialComponents.Button"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.37"
                        android:enabled="true"
                        android:hint="@string/txt_time_button"
                        app:cornerRadius="20dp" />


                </LinearLayout>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/create_btn"
            style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:enabled="false"
            android:text="@string/txt_add_button"
            app:cornerRadius="20dp"
            android:textSize="16sp" />

    </LinearLayout>
</ScrollView>